--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,8 +28,8 @@ services:
     ports:
       - ${POSTGRES_HOST_PORT}:${POSTGRES_PORT}
     environment:
-      TZ: Asia/Tokyo
-      PGTZ: Asia/Tokyo
+      TZ: ${TIME_ZONE}
+      PGTZ: ${TIME_ZONE}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
@@ -48,8 +48,8 @@ services:
     ports:
       - ${PGWEB_HOST_PORT}:${PGWEB_PORT}
     environment:
-      TZ: Asia/Tokyo
-      PGTZ: Asia/Tokyo
+      TZ: ${TIME_ZONE}
+      PGTZ: ${TIME_ZONE}
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}?sslmode=disable
     restart: always
     depends_on:
