Httpサーバーの起動

--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
 # PORT(HOST)
 POSTGRES_HOST_PORT=7100
 PGWEB_HOST_PORT=7101
+HTTP_HOST_PORT=7102
 
 # PORT(CONTAINER)
 POSTGRES_PORT=5432
 PGWEB_PORT=8081
+HTTP_PORT=8080
 
 # POSTGRES
 POSTGRES_USER=root
