--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,8 @@ services:
       - ./:/app
     command: ["go", "run", "src/cmd/main.go"]
     ports:
-      - "8080:8080"
+      - ${HTTP_HOST_PORT}:${HTTP_PORT}
+      # - "8080:8080"
     environment:
       DB_HOST: db
       DB_PORT: ${POSTGRES_PORT}
